# refude-services

./: CMakeLists.txt  COPYING  README.md  addheader.sh  commandsTemplate.json  controller.cpp  controller.h  desktopActionTemplate.json  desktopTemplate.json  desktopentryreader.cpp  desktopentryreader.h  desktopentryresource.cpp  desktopentryresource.h  desktopentryresourcesbuilder.cpp  desktopentryresourcesbuilder.h  desktopresourcebuilder.cpp  desktopresourcebuilder.h  desktopservice.cpp  desktopservice.h  directories.cpp  directories.h  example.h  handlerTemplate.json  iconcollector.cpp  iconcollector.h  iconresource.cpp  iconresource.h  iconresourcebuilder.cpp  iconresourcebuilder.h  icontheme.h  indexthemereader.cpp  indexthemereader.h  inireader.cpp  inireader.h  license-header-template.txt  linereader.h  main.cpp  mimeappslistreader.cpp  mimeappslistreader.h  mimeresourcebuilder.cpp  (+21 more)
api/: CMakeLists.txt
client/: CMakeLists.txt  main.cpp  resource.cpp  resource.h  websocket.cpp  websocket.h
common/: CMakeLists.txt  httpmessage.cpp  httpmessage.h  httpprotocol.cpp  httpprotocol.h  httpstuff.cpp  httpstuff.h  websocket.cpp  websocket.h  windowinfo.cpp  windowinfo.h  xdg.cpp  xdg.h
connman-service/: CMakeLists.txt  agent.cpp  agent.h  connmanobject.cpp  connmanobject.h  controller.cpp  controller.h  dbusproxy.cpp  dbusproxy.h  main.cpp
desktop-service/: CMakeLists.txt  applicationcollector.cpp  applicationcollector.h  applicationresource.cpp  applicationresource.h  commandTemplate.json  commandsTemplate.json  controller.cpp  controller.h  desktopActionTemplate.json  desktopTemplate.json  desktopentryreader.cpp  desktopentryreader.h  desktopentryresource.cpp  desktopentryresource.h  desktopentryresourcesbuilder.cpp  desktopentryresourcesbuilder.h  desktopservice.cpp  desktopservice.h  desktopwatcher.cpp  desktopwatcher.h  handlerTemplate.json  main.cpp  main.cpp.sided  mimeappslistreader.cpp  mimeappslistreader.h  mimeresourcebuilder.cpp  mimeresourcebuilder.h  mimetypecollector.cpp  mimetypecollector.h  mimetyperesource.cpp  mimetyperesource.h  resources.cpp  resources.h  runapplication.cpp  runapplication.h  subtypeTemplate.json  typedefs.h
desktopservice/: CMakeLists.txt  desktopentryreader.cpp  main.cpp  (+17 more)
examples/: .polltest.c.swp  CMakeLists.txt  Description.md  main.cpp  power.cpp  power.h
examples/dynamic/: CMakeLists.txt  dynamic_client.cpp  dynamic_client.cpp.cpp  dynamic_resource.cpp
icon-service/: CMakeLists.txt  iconcollector.cpp  iconcollector.h  iconresource.cpp  iconresource.h  iconresourcebuilder.cpp  iconresourcebuilder.h  icontheme.h  main.cpp  main.cpp.sided  refude-iconservice.desktop  themeTemplate.json  themereader.cpp  themereader.h  types.h
lib/: CMakeLists.txt  abstractcachingresource.h  abstractresource.h  app.h  buffer.cpp  buffer.h  collectionresource.h  comm.h  descriptor.h  errorhandling.cpp  errorhandling.h  fd.h  genericresource.cpp  genericresource.h  haljsondoc.cpp  haljsondoc.h  heap.cpp  heap.h  httpmessage.cpp  httpmessage.h  httpmessagereader.h  httpprotocol.cpp  httpprotocol.h  inireader.h  json.cpp  json.h  jsondoc.cpp  jsondoc.h  jsondocreference.cpp  jsondocreference.h  jsonparser.cpp  jsonparser.h  jsonpointer.h  jsonreader.cpp  jsonreader.h  jsonresource.cpp  jsonresource.h  jsonresourcecollection.h  jsonstruct.cpp  jsonstruct.h  (+35 more)
lib/client/: methods.h
lib/common/: errorhandling.cpp  httpmessage.cpp  httpprotocol.cpp
lib/impl/: abstractcachingresource.cpp  abstractresource.cpp  abstractresource.cpp.autosave  app.cpp  buffer.cpp  collectionresource.cpp  comm.cpp  descriptor.cpp  errorhandling.cpp  fd.cpp  genericresource.cpp  httpmessage.cpp  httpmessagereader.cpp  httpprotocol.cpp  inireader.cpp  json.cpp  jsonreader.cpp  jsonresource.cpp  jsonresourcecollection.cpp  jsonwriter.cpp  listener.cpp  localizingjsonwriter.cpp  methods.cpp  notifierresource.cpp  request.cpp  resourcecollection.cpp  server.cpp  service.cpp  socketqueue.cpp  test.cpp  utils.cpp  webserver.cpp  xdg.cpp
lib/private_headers/: methods.h  test.h
lib/public_headers/: abstractcachingresource.h  abstractresource.h  buffer.h  collectionresource.h  errorhandling.h  genericresource.h  httpmessage.h  httpprotocol.h  inireader.h  json.h  jsonreader.h  jsonresource.h  jsonwriter.h  localizingjsonwriter.h  map.h  notifierresource.h  service.h  utils.h  webserver.h  xdg.h
lib/server/: abstractresource.cpp  abstractresource.h  requesthandler.h  resourcemap.cpp
lib/test/: CMakeLists.txt  test_json.cpp  test_json_2.cpp  test_json_parser.cpp  test_map.cpp  test_notification.cpp  test_socket_speed.cpp  test_string_escaping.cpp
mimeservice/: CMakeLists.txt  main.cpp  mimeservice.cpp  mimeservice.h  resourcebuilder.cpp  resourcebuilder.h  rootTemplate.json  typeTemplate.json
power-service/: CMakeLists.txt  batteryResourceTemplate.json  batteryresource.cpp  batteryresource.h  main.cpp  powerapplication.cpp  powerapplication.h  properties_if.cpp  properties_if.h  upower_if.cpp  upower_if.h
service/api/: CMakeLists.txt  HttpRequest.cpp  HttpRequest.h  abstractresource.cpp  abstractresource.h  genericresource.cpp  genericresource.h  httpprotocol.cpp  httpprotocol.h  httprequest.cpp  httprequest.h  main.cpp  notifier.cpp  notifier.h  requesthandler.cpp  requesthandler.h  requestqueue.cpp  requestqueue.h  service.cpp  service.h
services/desktop-service/: CMakeLists.txt  applicationcollector.cpp  applicationcollector.h  controller.cpp  controller.h  desktopentryreader.cpp  desktopentryreader.h  desktopwatcher.cpp  desktopwatcher.h  main.cpp  mimeappslistreader.cpp  mimeappslistreader.h  mimetypecollector.cpp  mimetypecollector.h  runapplication.cpp  runapplication.h  typedefs.h
test/: CMakeLists.txt  data.json  string.json  test_json.cpp  test_json_2.cpp  test_json_parser.cpp  test_notification.cpp  test_socket_speed.cpp  test_string_escaping.cpp  test_webserver.cpp
wm-service/: CMakeLists.txt  controller.cpp  controller.h  getprop.h  main.cpp  runningappsicons.cpp  runningappsicons.h  windowinfo.cpp  windowinfo.h  windowresource.cpp  windowresource.h
(+156 files in other folders)
