set(PROJECT "MimeService")
project(${PROJECT})
include_directories(${CMAKE_SOURCE_DIR}/lib)
file(GLOB SOURCE_FILES *.cpp)

file(GLOB JSON_TEMPLATES *.json)
foreach (JSON_TEMPLATE ${JSON_TEMPLATES}) 
    get_filename_component(BASENAME ${JSON_TEMPLATE} NAME_WE)
    set(HFILE "${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.h")
    set(CMD "${CMAKE_SOURCE_DIR}/toString.sh")
    add_custom_command(OUTPUT ${HFILE} COMMAND ${CMD} ARGS ${JSON_TEMPLATE} ${HFILE} DEPENDS ${JSON_TEMPLATE}) 
    list(APPEND HFILES ${HFILE})
endforeach (JSON_TEMPLATE) 

add_executable(${PROJECT} ${SOURCE_FILES} ${HFILES})
target_link_libraries(${PROJECT} pthread ${CMAKE_BINARY_DIR}/lib/librestfulipc.so tinyxml2)
